examples/neg/issue373/existentials_wrong_arity.effekt
interface Eff[A] {
  def op[B](x: A): A
}

def main() =
  try { println(eff.op[Int]("hello")) }
  with eff: Eff[Int] { def op[B](x) = resume(x / 1) }